<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_write_tweet"
        android:icon="@drawable/ic_compose"
        android:showAsAction="ifRoom"
        android:title="@string/write_tweet"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:showAsAction="ifRoom"
        android:title="@string/search"/>
    <item
        android:id="@+id/menu_my_profile"
        android:title="@string/my_profile"/>
    <item
        android:id="@+id/menu_messages"
        android:title="@string/messages"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/menu_cache"
        android:title="@string/cache_html"/>
    <item
        android:id="@+id/menu_cache_clear"
        android:title="@string/clear_cache_html"/>
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/about"/>
    <item
        android:id="@+id/menu_feedback"
        android:title="@string/feedback"/>

</menu>