<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2011 ETH Zurich. All rights reserved. This program and 
	the accompanying materials are made available under the terms of the GNU 
	Public License v2.0 which accompanies this distribution, and is available 
	at http://www.gnu.org/licenses/old-licenses/gpl-2.0.html Contributors: Paolo 
	Carta - Implementation Theus Hossmann - Implementation Dominik Schatzmann 
	- Message specification
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showConditionsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="24dp">

        <TextView
            android:id="@+id/textConditionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleText.Normal"
            android:text="@string/terms_and_conditions" 
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/textConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            style="@style/NormalText"
            android:layout_below="@id/textConditionTitle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_below="@id/textConditions" 
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/buttonAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                style="@style/Button.Solid.Normal"
                android:text="@string/agree" 
                android:layout_weight="1"
                android:onClick="agreeToTerms"/>

            <Button
                android:id="@+id/buttonDecline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                style="@style/Button.Outline"
                android:text="@string/decline" 
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>